# qepcad

qesource/: CMakeLists.txt
qesource/cad2d/: CMakeLists.txt
qesource/cad2d/src/: MAIN.c
qesource/extensions/: CMakeLists.txt
qesource/extensions/adj2d/: ADJ_2D1P1.c  ADJ_2D1P2.c  ADJ_2D1P3.c  ADJ_2D1_SIMPLE.c  CMakeLists.txt
qesource/extensions/adj2d/oldadj/: CMakeLists.txt
qesource/extensions/adj2d/sac_ext/: CMakeLists.txt
qesource/extensions/adj2d/truthbytop/: CMakeLists.txt
qesource/extensions/lift2D/: CMakeLists.txt
qesource/extensions/newadj/: CMakeLists.txt
qesource/extensions/rend/: CMakeLists.txt  gcmemloc.h  rend.h
qesource/extensions/sfext/: CMakeLists.txt  mysort.h
qesource/extensions/sfext/addpol/: CMakeLists.txt  STRIPPED_BIGLOOP.c
qesource/extensions/sfext/crcads/: CMakeLists.txt
qesource/extensions/sfext/espcad/: CMakeLists.txt
qesource/extensions/sfext/extlang/: CMakeLists.txt
qesource/extensions/sfext/fewpol/: CMakeLists.txt
qesource/extensions/sfext/formula/: CMakeLists.txt
qesource/extensions/sfext/minhit/: CMakeLists.txt
qesource/extensions/sfext/pcadst/: CMakeLists.txt
qesource/extensions/sfext/projpf/: CMakeLists.txt
qesource/extensions/sfext/sfcons/: CMakeLists.txt
qesource/extensions/sfext/sort/: BVIS.c  BVISI1.c  CMakeLists.txt
qesource/plot2d/: CMakeLists.txt
qesource/source/: CMakeLists.txt  qepcad.h
qesource/source/db/: CMakeLists.txt  convenientstreams.h
qesource/source/io/: CMakeLists.txt
qesource/source/main/: BEGINQEPCAD.c  CMakeLists.txt  MAIN.c
qesource/source/normqff/: CMakeLists.txt
qesource/source/proj/: CMakeLists.txt
qesource/source/saclib/: CMakeLists.txt
qesource/source/sysolve/: CMakeLists.txt
qesource/source/ticad/: CMakeLists.txt  SUBST.c  SUBSTR.c
qesource/source/userint/: CMakeLists.txt  HELPFRD.c
qesource/source/util/: CMakeLists.txt
