FILE(GLOB LIFT2D_SRC
PFSRRQ2D.c
PFSRDQ2D.c
CELLLEFTSIB.c
CELLRIGHTSIB.c
CELLSRRQ2D.c
CELLSRDQ2D.c
LIFTSRR2D.c
modHIPRRISD.c
modHIPRRID.c
modIBPRRIOAP.c
LIFTSRD2D.c
IBPRRIOAP.c
IBPRRIOAPSF.c
IBPELBRISIPR.c
IBPESISIPR.c
modIBPRRIOAPSF.c
modSIPRRISD.c
modSIPRRID.c
)

set_source_files_properties(${LIFT2D_SRC} PROPERTIES LANGUAGE CXX)
add_library(lift2D OBJECT ${LIFT2D_SRC})
set_target_properties(lift2D PROPERTIES LANGUAGE CXX)
target_include_directories(lift2D
	PUBLIC
	/usr/include/saclib
	${CMAKE_SOURCE_DIR}/source/
	${CMAKE_CURRENT_SOURCE_DIR}
)

target_sources(libqepcad PRIVATE $<TARGET_OBJECTS:lift2D>)

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lift2d.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/qepcad/lift2D")
