FILE(GLOB IO_SRC
OW.c
AFLWR.c
AFPDWR.c
AFUPRWR.c
AFWR.c
ATOMFLWR.c
ATOMFRDR.c
ATOMFWR.c
BKSP.c
CATTRNRDR.c
CATTRNWR.c
CELLRDR.c
CELLWR.c
CELLSWR.c
COMMNT.c
COMMNTRD.c
CONWR.c
CREAD.c
CWRITE.c
DESIREDRDR.c
DESIREDWR.c
DIELOC.c
DISCONWR.c
DNFWR.c
DNFLPWR.c
DNFLWR.c
DSTATWR.c
FGWRITE.c
FILINE.c
FREADR.c
FWRITE.c
GETWORD.c
GREADR.c
IPLDWR.c
IPLLDWR.c
IPLLDWRMOD.c
IUPRWR.c
LABELWR.c
LGOPRDR.c
LGOPWR.c
PARENTWR.c
PCADWR.c
PCADSWR.c
PIMPTBLWR.c
PLABELWR.c
PRODWR.c
QFFLPWR.c
QFFLWR.c
QFFRDR.c
QFFWR.c
QFRDR.c
QFWR.c
RLOPRDR.c
RLOPWR.c
SAMPLEWR.c
SIGNLWR.c
SIGNWR.c
STACKMWR.c
STATWR.c
TAB.c
TRMODEWR.c
TRUTHWR.c
VLREADR.c
VREADR.c
VWRITE.c
XREADR.c
)

set_source_files_properties(${IO_SRC} PROPERTIES LANGUAGE CXX)
add_library(io OBJECT ${IO_SRC})
set_target_properties(io PROPERTIES LANGUAGE CXX)
target_include_directories(io
        PUBLIC
        /usr/include/saclib
        ${CMAKE_SOURCE_DIR}/source
)

target_sources(libqepcad PRIVATE $<TARGET_OBJECTS:io>)
