FILE(GLOB SYSOLVE_SRC
ASSUMPTIONSRATVEVAL.c
CHANGEASSUMPTIONSLEVEL.c
COEFFSYS.c
EVALSYS.c
FINDRATCOORD.c
IPRSOL.c
LBMIPL.c
LOSETSBF.c
LPSILB.c
PRINTCOEFFSYSTEM.c
QFRCALLS.c
SIMPLIFYSYS.c
SIMPLIFYSYSLIST.c
SYSSOLVE.c
SYSTOUNNORMFORMULA.c
VERIFYCONSTSIGN.c
)

set_source_files_properties(${SYSOLVE_SRC} PROPERTIES LANGUAGE CXX)
add_library(sysolve OBJECT ${SYSOLVE_SRC})
set_target_properties(sysolve PROPERTIES LANGUAGE CXX)
target_include_directories(sysolve
        PUBLIC
        /usr/include/saclib
        ${CMAKE_SOURCE_DIR}/source
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_sources(libqepcad PRIVATE $<TARGET_OBJECTS:sysolve>)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/sysolve.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/qepcad")
