FILE(GLOB TICAD_SRC
ECLI.c
ISFECLI.c
CELLNA.c
ACCCVBC.c
ACCCVBCR.c
AFCSBM.c
AFMSBM.c
AFUPLM.c
AFUPMPR.c
APEQC.c
CELLATTR.c
CELLCOMP.c
CELLSQ.c
CHCELL.c
CHOOSE.c
CHSCN.c
CONSTRUCT.c
CONVERT.c
CSSP.c
CVCOMP.c
DELINPOL.c
DELINPOLR.c
PFPRDQ.c
PPPRDQ.c
IPALLPARTIALS.c
DESCENDANT.c
DMAFUPNR.c
DSCOMP.c
EC.c
EC1.c
ECR.c
EVALUATE.c
FNDTS.c
GETRP.c
INITPCAD.c
IPFSBM.c
IPLSRP.c
ISDESIRED.c
ISPRIMIT.c
IXCOMP.c
LVCOMP.c
LPFTOLRLP.c
LPFZCALL.c
MAFDIF.c
MAFHOM.c
MAFINV.c
MAFPROD.c
MAFUPDIF.c
MAFUPEPROD.c
MAFUPGCD.c
MAFUPMON.c
MAFUPNR.c
MCELL.c
MKMUL.c
MODCR.c
MUPNR.c
NORMAL.c
NZFOPQ.c
NZFOPQR.c
PFCOICQ.c
PLPOS.c
PROPAGATE.c
QFFTEV.c
RCFAFC.c
SETTRUTHVALUE.c
SIGNB.c
SIGNL.c
SIGNP.c
SIGNP1.c
SIGNPR.c
SIMPLEQE.c
SPFRPSFT.c
SSCOMP.c
STACKMULT.c
SUBST.c
SUBSTR.c
TCHILD.c
TICAD.c
TICADauto.c
)

set_source_files_properties(${TICAD_SRC} PROPERTIES LANGUAGE CXX)
add_library(ticad OBJECT ${TICAD_SRC})
set_target_properties(ticad PROPERTIES LANGUAGE CXX)
target_include_directories(ticad
        PUBLIC
        /usr/include/saclib
        ${CMAKE_SOURCE_DIR}/source
)

target_sources(libqepcad PRIVATE $<TARGET_OBJECTS:ticad>)
